--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/index.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/index.html.twig
@@ -21,7 +21,11 @@ li{
 }
 .icon-ok-sign{
     color: green;
-    font-size: 1.4em;
+    font-size: 12px;
+
+}
+.linknombre{
+    color: #368EE0;
 }
 table tr td .aprobado{
     text-align: center;
@@ -33,10 +37,7 @@ table tr td .aprobado{
                     <div class="span12">
                         <div class="box box-color box-bordered green">
                             <div class="box-title">
-                                <h3>
-                                    <i class="icon-table"></i>
-                                    Vacaciones
-                                </h3>
+                                <h3><a class="btn btn-success" href="{{ path('vacaciones_new') }}"><i class="icon-plus-sign"></i>Agregar Vacaciones </a></h3>
                             </div>
                             <div class="box-content nopadding">
                                 <table class="table table-hover table-nomargin table-striped dataTable dataTable-reorder">
@@ -44,7 +45,7 @@ table tr td .aprobado{
                                         <tr>
                                             <th>ID</th>
                                             <th>Nombre y Apellidos</th>
-                                            <th>Fechadesolitud</th>
+                                            <th>Fecha de solitud</th>
                                             <th class='hidden-350'>Días</th>
                                             <th class='hidden-1024'>Comienza</th>
                                             <th class='hidden-480'>Termina</th>
@@ -55,7 +56,8 @@ table tr td .aprobado{
                                         {% for entity in entities %}
                                         <tr>
                                             <td><a href="{{ path('vacaciones_pdf', { 'id': entity.id }) }}"><i class="icon-file"></i></td></td></a>
-                                            <td>{{ entity.name}}-{{ entity.apellidos}}</td>
+                                            <td><a class="linknombre" href="{{ path('vacaciones_mos', { 'id': entity.idu}) }}">
+                                                {{ entity.name}}-{{ entity.apellidos}}</a></td>
                                             <td>{% if entity.fechadesolitud %}{{ entity.fechadesolitud|date('Y-m-d') }}{% endif %}
                                             </td>
                                             <td class='hidden-350'>{{ entity.cantidad }}</td>
@@ -72,11 +74,5 @@ table tr td .aprobado{
                         </div>
                     </div>
                 </div>
-    <ul>
-         <li >
-            <a class="boton" href="{{ path('vacaciones_new') }}">
-                Solicitar Vacaciones
-                </a>
-        </li>
-    </ul>
+
 {% endblock %}
