--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/vista.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/vista.html.twig
@@ -15,7 +15,12 @@
 .rojo{
     background-color: red;
 }
+.azul{
+    background-color: #368EE0;
+    color: white;
+}
 </style>
+{% set hoy='now'|date('Y/m/d') %}
 <div class="row-fluid">
     <div class="span12">
         <div class="box">
@@ -32,21 +37,52 @@
             <table class="table table-nomargin table-condensed">
                 <thead>
                     <tr>
+                        <th style="text-align:center">MES</th>
+                        {% for i in -10..40 %}
+                            {% set fecha='now'|date('Y/m/d')|sumar_fechas(i) %}
+                            {% if hoy==fecha %}   
+                            <th style="background-color:#368EE0" class="azul">
+                                {{'now'| date('Y/m/d')|sumar_fechas(i)|date('m')}}
+                            </th>
+                            {% else %}
+                            <th style="text-align:center">
+                                {{'now'| date('Y/m/d')|sumar_fechas(i)|date('m')}}
+                            </th>
+                            {% endif %}
+                        {% endfor %} 
+                    </tr>
+                </thead>
+                <thead>
+                    <tr>
                         <th>Nombres</th>
-                        {% for i in -10..40 %}        
-                        <th>
-                            {{ 'now'| date('Y/m/d')|sumar_fechas(i)|fecha ('full','none','es')| mostrar_primer_caracter| upper}}
-                        </th>   
+                        {% for i in -10..40 %}
+                            {% set fecha='now'|date('Y/m/d')|sumar_fechas(i) %}
+                            {% if hoy==fecha %}   
+                                <th style="background-color:#368EE0" class="azul" style="text-align:center">
+                                    {{ 'now'| date('Y/m/d')|sumar_fechas(i)|fecha ('full','none','es')| mostrar_primer_caracter| upper}}
+                                </th>
+                            {% else %}
+                                <th style="text-align:center">
+                                    {{ 'now'| date('Y/m/d')|sumar_fechas(i)|fecha ('full','none','es')| mostrar_primer_caracter| upper}}
+                                </th>
+                            {% endif %}  
                         {% endfor %} 
                     </tr>
                 </thead>
                 <thead>
                     <tr>
                         <th>Apellidos</th>
-                        {% for i in -10..40 %}        
-                        <th>
-                        {{ ('now'| date('Y/m/d')|sumar_fechas(i)|date ('d'))}}
-                        </th>   
+                        {% for i in -10..40 %}
+                            {% set fecha='now'|date('Y/m/d')|sumar_fechas(i) %}
+                            {% if hoy==fecha %}   
+                                <th style="background-color:#368EE0" class="azul" style="text-align:center">
+                                    {{ ('now'| date('Y/m/d')|sumar_fechas(i)|date ('d'))}}
+                                </th>
+                            {% else %}
+                                <th style="text-align:center">
+                                {{ ('now'| date('Y/m/d')|sumar_fechas(i)|date ('d'))}}
+                                </th>
+                            {% endif %}   
                         {% endfor %}   
                     </tr>
                 </thead>
@@ -56,23 +92,26 @@
                     </tr>
                     {% for entity in entities %}
                     <tr>
+                        {% if entity.fechadeinicio > date('now'| date('Y/m/d')|sumar_fechas(-11)) %}
                         <td>{{ entity.name }}~{{ entity.apellidos }}</td>
-                        {% for i in -10..40-entity['numDias'] %}
-                            {% if  date('now'| date('Y/m/d')|sumar_fechas(i)) == date(entity.fechadeinicio) %}  
-                                {% for x in 0..100 %}
-                                    {% if entity['numDias']+1 > x and entity['aprobado']==0 %}
-                                    <td bgcolor="yellow">.</td>
-                                    {% elseif entity['numDias']+1 > x and entity['aprobado']==1 %}
-                                    <td bgcolor="green">.</td>
-                                    {% elseif entity['numDias']+1 > x and entity['aprobado']==2 %}
-                                    <td bgcolor="red">.</td>
-                                    {% endif %}
-                                {% endfor %}
-                            {% else %}
-                            <td>x</td>
-                            {% endif %}
-                        {% endfor %}
+                            {% for i in -10..40-entity['numDias'] %}
+                                {#Pinto con colores los recuadros#}
+                                {% if  date('now'| date('Y/m/d')|sumar_fechas(i)) == date(entity.fechadeinicio) %}  
+                                    {% for x in 0..100 %}
+                                        {% if entity['numDias']+1 > x and entity['aprobado']==0 %}
+                                        <td style="text-align:center" bgcolor="yellow">S</td>
+                                        {% elseif entity['numDias']+1 > x and entity['aprobado']==1 %}
+                                        <td style="text-align:center" bgcolor="green">A</td>
+                                        {% elseif entity['numDias']+1 > x and entity['aprobado']==2 %}
+                                        <td style="text-align:center" bgcolor="red">R</td>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% else %}
+                                <td style="text-align:center">.</td>
+                                {% endif %}
+                            {% endfor %}
                     </tr>
+                        {% endif %}
                     {% endfor %}
                 </tbody>
                 </table>
