--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/edit.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends "::base8.html.twig" %}
 {% block body %}
 <div class="row-row-fluid">
+{% if is_granted("ROLE_ADMIN") and entity.aprobado==null %}
     <div class="span12">
         <div class="box">
             <div class="box-title">
@@ -30,6 +31,9 @@
             </div>
         </form>
     </div>
+{% else %}
+<h1>No estas autorizado a ingresar</h1>
+{% endif %}
 </div>
 <script type="text/javascript">
 $(function(){
