--- a/src/Embajada/DocumentosBundle/Resources/views/Memoi/pdf.pdf.twig
+++ b/src/Embajada/DocumentosBundle/Resources/views/Memoi/pdf.pdf.twig
@@ -58,8 +58,11 @@ li{
             <td height="25px" width="50px"></td>
             <td height="25px" width="100px">ASUNTO</td>
             <td width="20px">:</td>
-            <td width="400px">{{ entity.asunto}}</td>
+            <td width="350px"><p>{{ entity.asunto}}</p></td>
             
+        </tr>
+        <tr>
+            <td></td>
         </tr>
         <tr> 
             <td height="25px" width="50px"></td>
