--- a/app/Resources/views/base8.html.twig
+++ b/app/Resources/views/base8.html.twig
@@ -19,11 +19,6 @@
     <!-- chosen -->
     <link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/jquery-ui/smoothness/jquery.ui.theme.css')}}">
     <link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/chosen/chosen.css')}}">
-    <!-- PageGuide -->
-    <link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/pageguide/pageguide.css')}}">
-    <!-- Fullcalendar -->
-    <link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/fullcalendar/fullcalendar.css')}}">
-    <link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/fullcalendar/fullcalendar.print.css')}}" media="print">
     <!-- Theme CSS -->
     <link rel="stylesheet" href="{{ asset('bundles/notas/css/style.css')}}">
     <!-- Color CSS -->
@@ -39,6 +34,8 @@
     <link rel="shortcut icon" href="{{asset('/Siame/web/img/favicone.ico')}}" />
     <!-- Apple devices Homescreen icon -->
     <link rel="apple-touch-icon-precomposed" href="{{asset('/Siame/web/img/apple-touch-icon-precomposed.png')}}" />
+    <!-- timepicker -->
+    <link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/timepicker/bootstrap-timepicker.min.css')}}">
     {% block stylesheets %}
 
   	{% endblock %}
@@ -92,6 +89,9 @@
                         <li>
                             <a href="{{path('vacaciones_new')}}">Solicitar Vacaciones</a>
                         </li>
+                        <li>
+                            <a href="{{path('compensatorios')}}"> Registro Compensatorios</a>
+                        </li>                        
                     </ul>
                 </li>
                 <li>
@@ -107,7 +107,9 @@
                         <li>
                             <a href="{{ path('hremision') }}">Hojas de Remision</a>
                         </li>
-                        
+                        <li>
+                            <a href="{{ path('valija') }}">Guia de Valija</a>
+                        </li>                        
                     </ul>
                 </li>
                 <li>
@@ -144,7 +146,9 @@
                             <a href="#"></a>
                         </li>
                         <li>
-                            <a href="">Salir</a>
+                            <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -156,6 +160,7 @@
 
                     
 {% block javascript %}
+{% endblock %}
 
     <!-- Nice Scroll -->
     <script src="{{ asset('bundles/notas/js/plugins/nicescroll/jquery.nicescroll.min.js')}}"></script>
@@ -166,19 +171,15 @@
     <script src="{{ asset('bundles/notas/js/plugins/jquery-ui/jquery.ui.draggable.min.js')}}"></script>
     <script src="{{ asset('bundles/notas/js/plugins/jquery-ui/jquery.ui.resizable.min.js')}}"></script>
     <script src="{{ asset('bundles/notas/js/plugins/jquery-ui/jquery.ui.sortable.min.js')}}"></script>
+    <script src="{{ asset('bundles/notas/js/plugins/jquery-ui/jquery.ui.spinner.js')}}"></script>
     <!-- Touch enable for jquery UI -->
     <script src="{{ asset('bundles/notas/js/plugins/touch-punch/jquery.touch-punch.min.js')}}"></script>
     <!-- slimScroll -->
     <script src="{{ asset('bundles/notas/js/plugins/slimscroll/jquery.slimscroll.min.js')}}"></script>
     <!-- Bootstrap -->
     <script src="{{ asset('bundles/notas/js/bootstrap.min.js')}}"></script>
-    <!-- vmap -->
-    <script src="{{ asset('bundles/notas/js/plugins/vmap/jquery.vmap.min.js')}}"></script>
-    <script src="{{ asset('bundles/notas/js/plugins/vmap/jquery.vmap.world.js')}}"></script>
-    <script src="{{ asset('bundles/notas/js/plugins/vmap/jquery.vmap.sampledata.js')}}"></script>
     <!-- Bootbox -->
     <script src="{{ asset('bundles/notas/js/plugins/bootbox/jquery.bootbox.js')}}"></script>
-
     <!-- dataTables -->
     <script src="{{ asset('bundles/notas/js/plugins/datatable/jquery.dataTables.min.js')}}"></script>
     <script src="{{ asset('bundles/notas/js/plugins/datatable/TableTools.min.js')}}"></script>
@@ -187,24 +188,13 @@
     <script src="{{ asset('bundles/notas/js/plugins/datatable/jquery.dataTables.columnFilter.js')}}"></script>
     <!-- Datepicker -->
     <script src="{{ asset('bundles/notas/js/plugins/datepicker/bootstrap-datepicker.js')}}"></script>
-    <!-- Flot -->
-    <script src="{{ asset('bundles/notas/js/plugins/flot/jquery.flot.min.js')}}"></script>
-    <script src="{{ asset('bundles/notas/js/plugins/flot/jquery.flot.bar.order.min.js')}}"></script>
-    <script src="{{ asset('bundles/notas/js/plugins/flot/jquery.flot.pie.min.js')}}"></script>
-    <script src="{{ asset('bundles/notas/js/plugins/flot/jquery.flot.resize.min.js')}}"></script>
-    <!-- imagesLoaded -->
-    <script src="{{ asset('bundles/notas/js/plugins/imagesLoaded/jquery.imagesloaded.min.js')}}"></script>
-    <!-- PageGuide -->
-    <script src="{{ asset('bundles/notas/js/plugins/pageguide/jquery.pageguide.js')}}"></script>
-    <!-- FullCalendar -->
-    <script src="{{ asset('bundles/notas/js/plugins/fullcalendar/fullcalendar.min.js')}}"></script>
-
+    <!-- Timepicker -->
+    <script src="{{ asset('bundles/notas/js/plugins/timepicker/bootstrap-timepicker.min.js') }}"></script>
     <!-- Theme framework -->
     <script src="{{ asset('bundles/notas/js/eakroko.js')}}"></script>
     <!-- Theme scripts -->
     <script src="{{ asset('bundles/notas/js/application.js')}}"></script>
-    <!-- Just for demonstration -->
-    <script src="{{ asset('bundles/notas/js/demonstration.js')}}"></script>
-{% endblock %}
+
+
 </body>
 </html>
