--- a/src/Embajada/ValijaBundle/Resources/views/Oficios/show.pdf.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Oficios/show.pdf.twig
@@ -4,7 +4,7 @@
 <table class="record_properties">
     <tbody>
         <tr>
-            <th>Id</th>
+            <th>Ids</th>
             <td>{{ entity.id }}</td>
         </tr>
         <tr>
@@ -31,6 +31,10 @@
             <th>Aprobado</th>
             <td>{{ entity.aprobado }}</td>
         </tr>
+        <tr>
+            <th>Cuerpo</th>
+            <td>{{ entity.cuerpo|raw }}</td>
+        </tr> 
         <tr>
             <th>Anexos</th>
             <td>{{ entity.anexos }}</td>
